# gptx

./: Cargo.toml  Makefile  README.md  config.toml
contrib/: skeleton.sh
example/: config.toml
example/scripts/: cgpt  defgpt  yn
src/: chat.rs  cli.rs  config.rs  format.rs  main.rs  repl.rs  role.rs  state.rs
