[package]
name = "tgpt"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
atty = "0.2.14"
chatgpt_rs = { version = "1.2.3", features = ["streams"]}
clap = { version = "4.4.11", features = ["derive"] }
colored = "2.0.4"
futures-util = "0.3.29"
rustyline = "13.0.0"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.0", features = ["rt-multi-thread"] }
toml = "0.8.10"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
